k8s/browse-library-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: browse-library-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: browse-library
  template:
    metadata:
      labels:
        app: browse-library
    spec:
      containers:
      - name: browse-library
        image: browse-library-service:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 5001
---
apiVersion: v1
kind: Service
metadata:
  name: browse-library
spec:
  selector:
    app: browse-library
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5001
  type: LoadBalancer
