k8s/browse-library.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: browse-library-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: browse-library
  template:
    metadata:
      labels:
        app: browse-library
    spec:
      containers:
        - name: browse-library
          image: markloboda/browse_library_service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: browse-library
spec:
  type: ClusterIP
  selector:
    app: browse-library
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
