k8s/etcd.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: etcd-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: etcd
  template:
    metadata:
      labels:
        app: etcd
    spec:
      containers:
      - name: etcd
        image: quay.io/coreos/etcd:latest
        ports:
        - containerPort: 2379
        volumeMounts:
        - name: etcd-data
          mountPath: /var/lib/etcd
      volumes:
      - name: etcd-data
        persistentVolumeClaim:
          claimName: etcd-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: etcd
spec:
  type: NodePort
  ports:
    - protocol: TCP
      port: 2379
      targetPort: 2379
  selector:
    app: etcd
