k8s/login-register.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: login-register-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: login-register
  template:
    metadata:
      labels:
        app: login-register
    spec:
      containers:
        - name: login-register
          image: markloboda/login_register_service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: login-register
spec:
  type: ClusterIP
  selector:
    app: login-register
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
