k8s/watchlist.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: watchlist-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: watchlist
  template:
    metadata:
      labels:
        app: watchlist
    spec:
      containers:
        - name: watchlist
          image: markloboda/watchlist_service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: watchlist
spec:
  type: ClusterIP
  selector:
    app: watchlist
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
