k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
spec:
  controller: k8s.io/ingress-nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: movie-library-ingress
  annotations:    
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /browse-library(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: browse-library
            port:
              number: 8080
      - path: /login-register(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: login-register
            port:
              number: 8080
